Fix: Characters are not visible until the conversion is confirmed when typing Japanese close #24

--- a/src/block-editor/editor.scss
+++ b/src/block-editor/editor.scss
@@ -15,7 +15,7 @@
 
 	.monaco-editor .inputarea {
 		padding: 0;
-		color: transparent;
+		color: inherit;
 		box-shadow: none;
 	}
 }
