--- a/src/classic-editor/style.scss
+++ b/src/classic-editor/style.scss
@@ -2,8 +2,6 @@
 	min-height: 300px;
 
 	.monaco-editor .inputarea {
-		padding: 0;
-		color: transparent;
 		box-shadow: none;
 	}
 }
